# NGServer

./: .gitignore  CMakeLists.txt  vcpkg-configuration.json  vcpkg.json
SQL/: struct.md
cmake/: use_vcpkg.cmake
src/: main.cpp
src/service/: GuardService.cpp  GuardService.hpp  IBaseService.hpp  SQLService.hpp  ServiceManger.cpp  ServiceManger.hpp
src/utils/: BaseUtils.hpp  PlatformAbstractLayer.cpp  PlatformAbstractLayer.hpp  Tools.hpp
src/utils/linux/: INFO.md  l_GetSysInfo.cpp  l_GetSysInfo.hpp
tests/exp/: exp1_io.cc  exp2_syscall.cc  exp3_clitool.cc
